--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hstore": "^0.0.1",
     "node-telegram-bot-api": "^0.61.0",
     "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
