--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hstore": "^0.0.1",
-    "node-telegram-bot-api": "^0.61.0",
-    "pg": "^8.9.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "mongoose": "^6.9.1",
+    "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
